--- a/josh-allen.html
+++ b/josh-allen.html
@@ -22,7 +22,7 @@
       <p>Josh Allen enters the 2025 season with a revamped receiving corps after the Diggs trade. With big-arm upside and red zone mobility, he remains a top fantasy quarterback. Training camp buzz suggests he’s locked in and ready to lead Buffalo deep into the postseason.</p>
 
       <!-- Player Image -->
-      <img src="https://example.com/josh-allen.jpg" alt="Josh Allen" style="max-width: 100%; height: auto;">
+      <img src="https://images2.minutemediacdn.com/image/upload/c_crop,w_1817,h_1817,x_0,y_0/c_fill,w_620,ar_1:1,f_auto,q_auto,g_auto/images/ImagnImages/mmsport/bills_central/01jr1240n5ypa7w137xt.jpg" alt="Josh Allen" style="max-width: 100%; height: auto;">
 
       <h3>Career Stats</h3>
       <ul>
