--- a/malik-nabers.html
+++ b/malik-nabers.html
@@ -22,7 +22,7 @@
       <p>Malik Nabers, drafted early in 2025, is generating major buzz in rookie minicamps. Analysts praise his elite speed and separation skills. If he continues this momentum, Nabers could be a fantasy sleeper with WR2 upside—especially if he earns early trust from his quarterback.</p>
 
       <!-- Player Image -->
-      <img src="https://example.com/malik-nabers.jpg" alt="Malik Nabers" style="max-width: 100%; height: auto;">
+      <img src="https://static01.nyt.com/athletic/uploads/wp/2024/12/15185359/GettyImages-2190113500-scaled-e1734306855326-1024x683.jpg?width=1920&quality=70&auto=webp" alt="Malik Nabers" style="max-width: 100%; height: auto;">
 
       <h3>Projected Stats for 2025</h3>
       <ul>
